<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    
    <string name="app_name">VrijetijdsApp</string>
    <string name="loading">Loading&#8230;</string>
    
    
    <string name="name">Naam</string>
    <string name="description">Beschrijving</string>
    <string name="manual">Handleiding</string>
    
    <!-- ImageButtons -->
    <string name="btnCancel">Annuleer</string>
    <string name="btnAccept">OK</string>
    <string name="btnDelete">Verwijder</string>
    <string name="btnSave">Opslaan</string>
    <string name="btnSearch">Zoek</string>
    <string name="btnPrevious">Previous</string>
    <string name="btnNext">Next</string>
    
    <!-- Property names -->
    <string name="prop_people">Personen</string>
    <string name="prop_location">Plaats</string>
    <string name="prop_energy">Energie</string>
    <string name="prop_price">Prijs</string>
    <string name="prop_time">Tijdsduur</string>
    <string name="prop_tags">Tags</string>
    <string name="prop_rating">Beoordeling</string>
    <!--energy-->
    <string name="prop_energy_rustig">Rustig</string>
    <string name="prop_energy_actief">Actief</string>
    <!--location-->
    <string name="prop_location_binnen">Binnen</string>
    <string name="prop_location_buiten">Buiten</string>
    <!--rating-->
    <string name="prop_rating_fun">Vond ik leuk</string>
    <string name="prop_rating_try">Wil ik eens proberen</string>
    <string name="prop_rating_notry">Wil ik niet proberen</string>
    <string name="prop_rating_nofun">Vond ik niet leuk</string>

    <!-- activity create -->
    <string name="create_hint_name">Naam</string>
    <string name="create_hint_description">Beschrijving</string>
    <string name="create_hint_manual">Handleiding</string>
    <string name="create_hint_min">Min</string>
    <string name="create_hint_max">Max</string>
    <string name="create_hint_tags">tag1, tag2, &#8230;</string>
    <string name="create_lbl_personen">Aantal personen</string>
    <string name="create_lbl_plaats">Plaats</string>
    <string name="create_lbl_prijs">Prijs</string>
    <string name="create_lbl_tijd">Tijdsduur</string>
    <string name="create_lbl_tags">Tags</string>
    <string name="create_lbl_energie">Energie</string>
    <string name="create_lbl_rating">Beoordeling</string>
    <string name="create_btn_fun">Vond ik leuk</string>
    <string name="create_btn_try">Wil ik eens proberen</string>
    <string name="create_btn_notry">Wil ik niet proberen</string>
    <string name="create_btn_nofun">Vond ik niet leuk</string>
    <string name="create_btn_binnen">Binnen</string>
    <string name="create_btn_buiten">Buiten</string>
    <string name="create_btn_rustig">Rustig</string>
    <string name="create_btn_actief">Actief</string>
    <string name="create_btn_cancel">Annuleer</string>
    <string name="create_btn_create">Maak</string>
    <!-- toast messages -->
    <string name="toast_create_fail">Het maken van de activiteit is mislukt. Is de naam uniek?</string>
    <string name="toast_create_nameless">Je moet een naam opgeven.</string>
    <string name="toast_create_success">Activiteit aangemaakt!</string>
    <string name="toast_create_cancel">Maken geannuleerd</string>

    <!-- activity edit -->
    <string name="edit_hint_name">Naam</string>
    <string name="edit_hint_description">Beschrijving</string>
    <string name="edit_hint_manual">Handleiding</string>
    <string name="edit_hint_min">Min</string>
    <string name="edit_hint_max">Max</string>
    <string name="edit_hint_tags">tag1, tag2, &#8230;</string>
    <string name="edit_lbl_personen">Aantal personen</string>
    <string name="edit_lbl_plaats">Plaats</string>
    <string name="edit_lbl_prijs">Prijs</string>
    <string name="edit_lbl_tijd">Tijdsduur</string>
    <string name="edit_lbl_tags">Tags</string>
    <string name="edit_lbl_energie">Energie</string>
    <string name="edit_lbl_rating">Beoordeling</string>
    <string name="edit_btn_fun">Vond ik leuk</string>
    <string name="edit_btn_try">Wil ik eens proberen</string>
    <string name="edit_btn_notry">Wil ik niet proberen</string>
    <string name="edit_btn_nofun">Vond ik niet leuk</string>
    <string name="edit_btn_binnen">Binnen</string>
    <string name="edit_btn_buiten">Buiten</string>
    <string name="edit_btn_rustig">Rustig</string>
    <string name="edit_btn_actief">Actief</string>
    <string name="edit_btn_cancel">Annuleer</string>
    <string name="edit_btn_delete">Verwijder</string>
    <string name="edit_btn_save">Opslaan</string>
    <!-- toast messages -->
    <string name="toast_edit_fail">Het aanpassen van de activiteit is mislukt. Is de naam uniek?</string>
    <string name="toast_edit_nameless">Je moet een naam opgeven.</string>
    <string name="toast_edit_success">Activiteit aangepast!</string>
    <string name="toast_edit_cancel">Aanpassen geannuleerd</string>
    <string name="toast_edit_removed">Activiteit verwijderd!</string>
    
    <!-- activity search --> 
    <string name="search_hint_tags">tag1, tag2, &#8230;</string>
    <string name="search_lbl_personen">Aantal personen</string>
    <string name="search_lbl_plaats">Plaats</string>
    <string name="search_lbl_prijs">Prijs</string>
    <string name="search_lbl_tijd">Tijdsduur</string>
    <string name="search_lbl_tags">Tags</string>
    <string name="search_lbl_energie">Energie</string>
    <string name="search_lbl_rating">Beoordeling</string>
    <string name="search_btn_fun">Vond ik leuk</string>
    <string name="search_btn_try">Wil ik eens proberen</string>
    <string name="search_btn_notry">Wil ik niet proberen</string>
    <string name="search_btn_nofun">Vond ik niet leuk</string>
    <string name="search_btn_binnen">Binnen</string>
    <string name="search_btn_buiten">Buiten</string>
    <string name="search_btn_rustig">Rustig</string>
    <string name="search_btn_actief">Actief</string>
    <string name="search_btn_cancel">Annuleer</string>
    <string name="search_btn_search">Zoek</string>
    <!-- toast messages -->
    <string name="toast_search_success">Zoeken is gelukt!</string>
    <string name="toast_search_cancel">Zoeken is geannuleerd.</string>
    
    <!-- activity main --> 
    <!--  toast messages -->
    <string name="toast_random_fail">Er kon geen activeit gevonden worden met de juiste criteria.</string>
    
    <!-- activity like -->
    <string name="like_btn_fun">Vond ik leuk</string>
    <string name="like_btn_try">Wil ik eens proberen</string>
    <string name="like_btn_notry">Wil ik niet proberen</string>
    <string name="like_btn_nofun">Vond ik niet leuk</string>
    <string name="like_btn_previous">Previous</string>
    <string name="like_btn_next">Next</string>
    <!-- toast messages -->
    <string name="toast_like_empty_selection">Er konden geen activiteiten zonder beoordeling gevonden worden.</string>
    
    <!-- toast messages -->
    <string name="file_not_found">Het bestand kon niet worden gevonden: </string>
    <string name="file_saved">De gekozen selectie is opgeslagen.</string>
    <string name="external_storage_not_writeable">De externe opslag is niet leesbaar.</string>
    <string name="external_storage_not_readable">De externe opslag is niet schrijfbaar.</string>
    <string name="file_write_error">Het schrijven naar dit bestand is mislukt: </string>

    <!-- menu -->
    <string name="menu_settings">Instellingen</string>
    <string name="menu_create">Nieuw maken</string>
    <string name="menu_search">Zoeken</string>
    <string name="menu_show_all">Toon alle</string>
    <string name="menu_edit">Aanpassen</string>
    <string name="menu_random">Random</string>
    <string name="menu_like">Beoordeel</string>
    <string name="menu_save">Opslaan</string>
    <string name="menu_load">Laden</string>
    
	
</resources>