<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical" >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_hint_name" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_hint_description"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/txtManual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_hint_manual"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/lblPersonen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_lbl_personen" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/txtPersonenMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edit_hint_min"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/txtPersonenMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edit_hint_max"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:id="@+id/lblPlaats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_lbl_plaats" />

            <RadioGroup
                android:id="@+id/rgPlaats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rbtnPlaatsBinnen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_btn_binnen" />

                <RadioButton
                    android:id="@+id/rbtnPlaatsBuiten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_btn_buiten" />
            </RadioGroup>

            <TextView
                android:id="@+id/lblEnergie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_lbl_energie" />

            <RadioGroup
                android:id="@+id/rgEnergie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rbtnEnergieRustig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_btn_rustig" />

                <RadioButton
                    android:id="@+id/rbtnEnergieActief"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_btn_actief" />
            </RadioGroup>

            <TextView
                android:id="@+id/lblPrijs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_lbl_prijs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/txtPrijsMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edit_hint_min"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/txtPrijsMax"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edit_hint_max"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:id="@+id/lblTijd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_lbl_tijd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/txtTijdMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edit_hint_min"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/txtTijdMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edit_hint_max"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:id="@+id/lblTags"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/edit_lbl_tags" />

            <EditText
                android:id="@+id/txtTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_hint_tags" />
            
            <TextView
                android:id="@+id/lblRating"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/edit_lbl_rating" />

            <RadioGroup
                android:id="@+id/rgRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rbtnRatingFun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_btn_fun" />

                <RadioButton
                    android:id="@+id/rbtnRatingTry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_btn_try" />

                <RadioButton
                    android:id="@+id/rbtnRatingNoTry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_btn_notry" />

                <RadioButton
                    android:id="@+id/rbtnRatingNoFun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_btn_nofun" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnCancel"
            android:text="@string/edit_btn_cancel" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnDelete"
            android:text="@string/edit_btn_delete" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnSave"
            android:text="@string/edit_btn_save" />
    </LinearLayout>

</LinearLayout>