<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/likeContainer"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="vertical" >
            
        </LinearLayout>
    </ScrollView>

    <RadioGroup
        android:id="@+id/rgRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rbtnRatingFun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_btn_fun" />

        <RadioButton
            android:id="@+id/rbtnRatingTry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_btn_try" />

        <RadioButton
            android:id="@+id/rbtnRatingNoTry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_btn_notry" />

        <RadioButton
            android:id="@+id/rbtnRatingNoFun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_btn_nofun" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnPrevious"
            android:onClick="btnPrevious"
            android:contentDescription="@string/btnPrevious"
            style="@style/ImageButton.btnPrevious" />

        <ImageButton
            android:id="@+id/btnNext"
            android:onClick="btnNext"
            android:contentDescription="@string/btnNext"
            style="@style/ImageButton.btnNext" />
    </LinearLayout>

</LinearLayout>